--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactjs-resort-booking-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/karljosephsarabia/resort-booking-app.git",
+  "homepage": "https://karljosephsarabia.github.io/resort-booking-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
